<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_username_layout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@android:color/darker_gray"
            app:hintTextColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_email_layout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@android:color/darker_gray"
            app:hintTextColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_password_layout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@android:color/darker_gray"
            app:hintTextColor="@android:color/darker_gray"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/mainYellow"
            app:cornerRadius="18dp"
            app:rippleColor="@android:color/darker_gray" />


        <TextView
            android:id="@+id/tvLogInRedirect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account_log_in_here"
            android:textAlignment="center"
            android:textColor="@color/mainYellow"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>