<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimary"
                android:navigationIcon="@drawable/ic_back"
                android:title="Edit Film"
                android:titleTextColor="@color/mainYellow" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_add_image"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/iv_film_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_add_image" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_judul_layout"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/judul"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_deskripsi_layout"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deskripsi"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_rating_layout"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rating"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/mainYellow"
                app:cornerRadius="18dp"
                app:rippleColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>